# expense-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 20260506_0000_0001_initial.py  20260512_0000_0002_portal_manual_expenses.py
app/: __init__.py  config.py  end_trip_flow.py  logging_setup.py  main.py  scheduler.py
app/ai/: batch.py  schema.py
app/bot/: handlers.py  keyboard.py
app/db/: models.py  session.py
app/reports/: pdf.py  types.py  xlsx.py  zip.py
app/storage/: s3.py
app/web/: auth.py  routes.py
app/web/templates/: _expense_row.html  _expense_row_edit.html  base.html  dashboard.html  expenses.html  login.html  trip_detail.html
docker/: entrypoint.sh
